--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
 author: Chelsea Power
-title: 
+title: Why Data Science?
 header-img: img/home-bg.png
 email: chelsea.power@gmail.com
 copyright_name: Chelsea Power
 description: > # this means to ignore newlines until "baseurl:"
-  
+  My learning journey
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  chelseapower
